# CoffeeFinder

./: .gitignore  CONTRIBUTING.md  README.md  cities_in_germany.txt  pyproject.toml  ruff.toml
backend/: main.py
backend/aggregator/: aggregator.py
backend/analysis/: __init__.py  analyzer.py  extractors.py  models.py
backend/analysis/analyzers/: base.py  image.py  pdf.py  text.py
backend/models/: __init__.py  city.py  coffee_shop.py  menu.py  website.py
backend/scraper/: overpassAPI.py  web_scraper.py
backend/src/: main.py  model.py
backend/src/analysis/: __init__.py  aggregate.py  component.py  detector.py  extractors.py  models.py  registry.py  service.py
backend/src/analysis/analyzers/: __init__.py  base.py  generic.py  html.py  image.py  pdf.py  text.py
backend/src/scraper/: export_json.py  overpassAPI.py  web-scraper.py  web_scraper.py
backend/src/utils/: export_json.py
backend/utils/: export_json.py
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.html  app.spec.ts  app.ts
frontend/src/app/map/: map.component.css  map.component.html  map.component.ts
frontend/src/app/models/: coffee-shop.model.ts
frontend/src/app/top-bar/: top-bar.css  top-bar.html  (+1 more)
test_sets/: Bochum_Germany.json
tests/: test_analysis_component.py  test_analysis_wrapper_smoke.py
tests/fixtures/analyzer/: cafe_caspi_expected.json  dummy1_expected.json  dummy2_expected.json  manifest.json  oktober_cafe_expected.json  oktober_cafe_menu.html
tests/fixtures/scraper/: bochum_cafes.json
