[project]
name = "coffeefinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi[all,standard]>=0.136.1",
    "lxml>=5.3.0",
    "osmnx>=2.1.0",
    "pillow>=10.4.0",
    "playwright>=1.59.0",
    "pycountry>=26.2.16",
    "pydantic>=2.13.3",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.13",
    "pytest>=9.0.3",
    "python-magic>=0.4.27",
    "requests>=2.33.1",
]
