[project]
name = "coffeefinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all,standard]>=0.136.1",
    "osmnx>=2.1.0",
    "playwright>=1.59.0",
    "pycountry>=26.2.16",
    "pydantic>=2.13.3",
    "requests>=2.33.1",
]
