[project]
name = "coffeefinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all,standard]>=0.136.1",
    "osmnx>=2.1.0",
    "pillow>=12.2.0",
    "playwright>=1.59.0",
    "pycountry>=26.2.16",
    "pydantic>=2.13.3",
    "pytesseract>=0.3.13",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
